tests/jballerina-unit-test/src/test/resources/test-src/javainterop/negative/method_sig_not_match7.bal
import ballerina/java;

function splitExternal(handle receiver, string delimeter) returns handle = @java:Method {
    name: "split",
    'class: "java.lang.String",
    paramTypes: ["java.lang.String"]
} external;
